Share igv.js samples property; combine filters
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>